[package]
name = "octree_dual_contour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23"
ilattice = { git = "https://github.com/bonsairobo/ilattice-rs", rev = "457fae6a561b55dbf2eb24646b7eca4564581103" }

[dev-dependencies]
bevy = "0.10"
smooth-bevy-cameras = "0.8"
