[package]
name = "octree_dual_contour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24"
ilattice = { git = "https://github.com/bonsairobo/ilattice-rs", rev = "b8cfffcc03d5281b118ebf1d6a28956a84981902" }

[dev-dependencies]
bevy = "0.11"
smooth-bevy-cameras = "0.9"
